# web-scanner

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  scan_3234820c.json
.claude/: settings.local.json
tests/: test_attack_descriptions.py  test_config.py  test_http_client.py  test_new_scanners.py  test_report.py  test_scanners.py
web_scanner/: __main__.py  attack_descriptions.py  backup_scanner.py  cmd_injection.py  config.py  cors_scanner.py  crawler.py  crlf_scanner.py  csrf_scanner.py  database.py  dir_bruteforce.py  http_client.py  http_verb_scanner.py  info_gather.py  main.py  modules.py  notifications.py  open_redirect.py  param_fuzzer.py  path_traversal.py  pdf_report.py  plugin_loader.py  port_scan.py  report.py  scanner.py  scheduler_service.py  sqli_scanner.py  ssl_check.py  ssrf_scanner.py  subdomain_enum.py  upload_scanner.py  utils.py  web_app.py  xss_scanner.py  xss_stored.py  xxe_scanner.py
web_scanner/plugins/: __init__.py
web_scanner/templates/: index.html
web_scanner/wordlists/: extended.txt
wordlists/: common.txt
